dummy-app/app-test-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer 
spec:
  tls:
  - hosts:
    - ec2-54-171-198-244.eu-west-1.compute.amazonaws.com
    secretName: app-cert-tls
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /dummy
        backend:
          service:
            name: nginx-svc 
            port:
              name: http
    host: ec2-54-171-198-244.eu-west-1.compute.amazonaws.com
